Enrich Release notes text in the index page

--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -66,7 +66,8 @@
         <hr/>
 
         <h1>Release notes</h1>
-        <p>Under development...</p>
+        <p>This game is under development...</p>
+        <p>Don't hesitate to provide your feedback or suggestions, by visiting our GitHub page.</p>
         <div class="rpgui-center">
             <a href="https://github.com/egraba/role-play">
                 <button class="rpgui-button" ><p>View on GitHub</p></button>
