--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}egraba's role-play{% endblock %}</title>
         {% load static %}
+        <link rel="icon" type="image/x-icon" href={% static 'images/mini-skull.png' %} >
         <link href={% static 'dist/rpgui.min.css' %} rel="stylesheet" type="text/css" >
         <script src={% static "dist/rpgui.min.js" %}></script>
         <link href={% static 'roleplay.css' %} rel="stylesheet" type="text/css" >
