Debug: Re-add min files

--- a/game/templates/base.html
+++ b/game/templates/base.html
@@ -4,8 +4,8 @@
         <title>{% block title %}egraba's role-play{% endblock %}</title>
         {% load static %}
         <link rel="icon" type="image/x-icon" href={% static 'images/mini-skull.png' %} >
-        <link href={% static 'dist/rpgui.css' %} rel="stylesheet" type="text/css" >
-        <script src={% static "dist/rpgui.js" %}></script>
+        <link href={% static 'dist/rpgui.min.css' %} rel="stylesheet" type="text/css" >
+        <script src={% static "dist/rpgui.min.js" %}></script>
         <link href={% static 'roleplay.css' %} rel="stylesheet" type="text/css" >
     </head>
 
