Implement password reset

--- a/game/templates/registration/login.html
+++ b/game/templates/registration/login.html
@@ -10,5 +10,6 @@
                 <button class="rpgui-button" type="submit"><p>Log in</p></button>
             </div>
         </form>
+        <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
     </div>
 {% endblock %}
