--- a/game/templates/game/character.html
+++ b/game/templates/game/character.html
@@ -3,6 +3,9 @@
 {% block content %}
     <div class="rpgui-container framed">
         <h1 class="title">{{ character }}</h1>
+        <div class="rpgui-center">
+            <a href={% url 'index' %}>- Return to main menu -</a>
+        </div>
 
         <hr class="golden"/>
 
