Add link to game

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -12,6 +12,9 @@
         {% load static %}
         <img class="rpgui-icon wizard" src={% static 'images/wizard.png' %}>
         <div class="tale"><p >{{ tale }}</p></div>
+        <div class="rpgui-center">
+            <a href={% url 'room' 'room' %}>- Join the chat -</a>
+        </div>
 
         <hr/>
 
