--- a/game/templates/chat/room.html
+++ b/game/templates/chat/room.html
@@ -33,15 +33,13 @@
                         document.querySelector('#discussion').value += (data.message + '\n');
                     };
 
-                    chatSocket.onclose = function(e) {
-                        console.error('Chat socket closed unexpectedly');
+                    chatSocket.onmessage = function(e) {
+                        const data = JSON.parse(e.data);
+                        document.querySelector('#discussion').value += (data.message + '\n');
                     };
 
-                    document.querySelector('#chat-message-input').focus();
-                    document.querySelector('#chat-message-input').onkeyup = function(e) {
-                        if (e.keyCode === 13) {  // enter, return
-                            document.querySelector('#chat-message-submit').click();
-                        }
+                    chatSocket.onclose = function(e) {
+                        console.error('Chat socket closed unexpectedly');
                     };
 
                     document.querySelector('#chat-message-submit').onclick = function(e) {
