--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -13,7 +13,7 @@
         <img class="rpgui-icon wizard" src={% static 'images/wizard.png' %}>
         <div class="tale"><p >{{ tale }}</p></div>
         <div class="rpgui-center">
-            <a href={% url 'room' 'room' %}>- Join the chat -</a>
+            <a href={% url 'room' game.room.id %}>- Join the chat -</a>
         </div>
 
         <hr/>
