--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -38,7 +38,7 @@
 
             document.querySelector('#chat-message-input').focus();
             document.querySelector('#chat-message-input').onkeyup = function(e) {
-                if (e.keyCode === 13) {  // enter, return
+                if (e.key === 'Enter') {
                     document.querySelector('#chat-message-submit').click();
                 }
             };
