--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -27,23 +27,23 @@
                 + '/'
             );
 
-            chatSocket.onmessage = function(e) {
-                const data = JSON.parse(e.data);
+            chatSocket.onmessage = function(event) {
+                const data = JSON.parse(event.data);
                 document.querySelector('#chat').value += (data.message + '\n');
             };
 
-            chatSocket.onclose = function(e) {
+            chatSocket.onclose = function(event) {
                 console.error('Chat socket closed unexpectedly');
             };
 
             document.querySelector('#chat-message-input').focus();
-            document.querySelector('#chat-message-input').onkeyup = function(e) {
-                if (e.key === 'Enter') {
+            document.querySelector('#chat-message-input').onkeyup = function(event) {
+                if (event.key === 'Enter') {
                     document.querySelector('#chat-message-submit').click();
                 }
             };
 
-            document.querySelector('#chat-message-submit').onclick = function(e) {
+            document.querySelector('#chat-message-submit').onclick = function(event) {
                 const messageInputDom = document.querySelector('#chat-message-input');
                 const message = messageInputDom.value;
                 chatSocket.send(JSON.stringify({
