--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -33,8 +33,16 @@
                 console.error('Chat socket closed unexpectedly');
             };
 
+            const chat = document.getElementById('chat');
             const input = document.getElementById('chat-message-input');
             const submitButton = document.getElementById('chat-message-submit');
+
+            {% for message in message_list %}
+                chat.innerHTML += '{{ message.user }}: ({{ message.date }})' + '\n';
+                chat.innerHTML += '{{ message.content }}' + '\n';
+            {% empty %}
+                chat.innerHTML = '';
+            {% endfor %}
 
             submitButton.addEventListener('click', function(event) {
                 const message = input.value;
