--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -31,7 +31,7 @@
             <p>Select the game you want to join.</p>
 
             {% for game in page_obj %}
-                <div class="rpgui-container framed-grey">
+                <div class="rpgui-container framed-golden-2">
                     <h2><a href={% url 'game' game.id %}>{{ game }}</a></h2>
                     <p>Status: {{ game.get_status_display }}</p>
                     <p>
