--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -60,7 +60,7 @@
                 {% endif %}
                 {% if perms.game.add_character %}
                     {% if character %}
-                        <a href="{% url 'character-detail' character.id %}"><button class="rpgui-button"><p>View character</p></button></a></p>
+                        <a href="{% url 'character-detail' character.id %}"><button class="rpgui-button"><p>View your character</p></button></a></p>
                     {% else %}
                         <a href="{% url 'character-create' %}"><button class="rpgui-button"><p>Create a new character</p></button></a></p>
                     {% endif %}
