--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -56,13 +56,19 @@
                     {% endif %}
                 </p>
                 {% if perms.game.add_game %}
-                    <a href="{% url 'game-create' %}"><button class="rpgui-button"><p>Create a new game</p></button></a></p>
+                    <a href="{% url 'game-create' %}">
+                        <button class="rpgui-button"><p>Create a new game</p></button>
+                    </a>
                 {% endif %}
                 {% if perms.game.add_character %}
                     {% if character %}
-                        <a href="{% url 'character-detail' character.id %}"><button class="rpgui-button"><p>View your character</p></button></a></p>
+                        <a href="{% url 'character-detail' character.id %}">
+                            <button class="rpgui-button"><p>View your character</p></button>
+                        </a>
                     {% else %}
-                        <a href="{% url 'character-create' %}"><button class="rpgui-button"><p>Create a new character</p></button></a></p>
+                        <a href="{% url 'character-create' %}">
+                            <button class="rpgui-button"><p>Create a new character</p></button>
+                        </a>
                     {% endif %}
                 {% endif %}
             </div>
