Improve text labels

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -62,7 +62,7 @@
                 </p>
             </div>
         {% empty %}
-            <p>No characters for this game...</p>
+            <p>There is no character for this game...</p>
         {% endfor %}
         {% if user.is_authenticated %}
             <div class="rpgui-center inline">
