--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -40,7 +40,7 @@
                 </div>
             {% empty %}
                 <div class="rpgui-container framed-grey">
-                    <p>No games are available...</p>
+                    <p>There is no game available...</p>
                 </div>
             {% endfor %}
             <div class="rpgui-center">
