--- a/game/templates/game/invitecharacter.html
+++ b/game/templates/game/invitecharacter.html
@@ -20,7 +20,7 @@
                 </p>
             </div>
         {% empty %}
-            <p>No character available...</p>
+            <p>There is no character available...</p>
         {% endfor %}
         <div class="rpgui-center">
             <p>
