Fix wording (invite)

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -72,7 +72,7 @@
                             <button class="rpgui-button"><p>Invite a character</p></button>
                         </a>
                     {% else %}
-                        <button disabled class="rpgui-button"><p>Add a character</p></button>
+                        <button disabled class="rpgui-button"><p>Invite a character</p></button>
                     {% endif %}
                 {% endif %}
                 {% if perms.game.change_game %}
