Enhance room's style

--- a/game/static/roleplay.css
+++ b/game/static/roleplay.css
@@ -63,5 +63,10 @@ ul.errorlist {
 }
 
 #chat {
-    height: 250px;
+    height: 25em;
+    font-size: xx-small;
+}
+
+#chat-message-input {
+    font-size: xx-small;
 }
