Enhance scrolling of chat room

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -55,6 +55,7 @@
                     minute: 'numeric',
                 }) + '): '
                 chat.innerHTML += '{{ message.content }}' + '\n';
+                chat.scrollTop = chat.scrollHeight;
             {% empty %}
                 chat.innerHTML = '';
             {% endfor %}
