--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -20,12 +20,12 @@
 
         <script>
             var protocol;
-            if (window.location.host.startsWith("localhost")) {
-                protocol = 'ws://';
+            if (window.location.protocol == 'https:') {
+                wsProtocol = 'wss://';
             } else {
-                protocol = 'wss://';
+                wsProtocol = 'ws://';
             }
-            const url = protocol + window.location.host + '/ws/chat/' + {{ room.id }} + '/';
+            const url = wsProtocol + window.location.host + '/ws/chat/' + {{ room.id }} + '/';
             const chatSocket = new WebSocket(url);
 
             chatSocket.onerror = function(error) {
