--- a/game/templates/game/startgameerror.html
+++ b/game/templates/game/startgameerror.html
@@ -6,7 +6,7 @@
         <p>The game cannot start:</p>
         <ul><li>At least two players are required to start a game.</li></ul>
         <div class="rpgui-center">
-            <a href={% url 'game' game.id %}><button class="rpgui-button"><p>Go back</p></button></a>
+            <a href={{ game.get_absolute_url }}><button class="rpgui-button"><p>Go back</p></button></a>
         </div>
     </div>
 {% endblock %}
