--- a/game/templates/game/invitecharacter.html
+++ b/game/templates/game/invitecharacter.html
@@ -13,7 +13,7 @@
         {% for character in character_list %}
             <div class="character rpgui-container framed-grey">
                 <p>
-                    <a href={% url 'character-detail' character.id %} style="width:100em">{{ character.name }}</a>
+                    <a href={{ character.get_absolute_url }} style="width:100em">{{ character.name }}</a>
                     Race: {{ character.get_race_display }},
                     XP: {{ character.xp }}
                     <a href={% url 'game-invite-character-confirm' game.id character.id %}><button class="rpgui-button" method="post"><p>Invite</p></button></a>
